--- a/trunk/Memorandos/application.properties
+++ b/trunk/Memorandos/application.properties
@@ -1,7 +1,8 @@
-#utf-8
-#Fri Oct 01 00:01:43 BRT 2010
-app.version=0.1
-app.servlet.version=2.4
-app.grails.version=1.1.1
-plugins.hibernate=1.1.1
+#Grails Metadata file
+#Fri Oct 01 01:23:05 BRT 2010
+app.grails.version=1.3.4
 app.name=Memorandos
+app.servlet.version=2.4
+app.version=0.1
+plugins.hibernate=1.3.4
+plugins.tomcat=1.3.4
